# the-shelf

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTENT_RATINGS.md  CSM_INTEGRATION.md  DATABASE_MIGRATION_GUIDE.md  DATABASE_OPERATIONS.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  DOCKER_COOLIFY_SETUP.md  IMPLEMENTATION_ROADMAP.md  MIGRATION_COOLIFY_SUPABASE.md  MODERNIZATION_PLAN.md  MULTI_DIMENSIONAL_RATINGS.md  PRODUCT_VISION.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
api/: index.py
backend/: Dockerfile  alembic.ini  entrypoint.sh  migrate.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: aa297f30d443_add_user_role.py  (+1 more)
backend/app/: auth.py  config.py  database.py  main.py  rate_limit.py  seed.py
backend/scripts/: init_db.py  seed_demo_data.py
backend/tests/: conftest.py  test_auth.py  test_books.py  test_goodreads.py  test_serialization.py
docs/planning/: ARCHITECTURE.md  CSM_INTEGRATION.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_ROADMAP.md  MODERNIZATION_PLAN.md  PRODUCT_VISION.md  PROJECT_STATUS.md  QUICK_START.md  README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend-next/: .env.example  .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend-next/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css
scripts/: backup.sh  restore.sh
(+107 files in other folders)
