[project]
name = "the-shelf-api"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.115.6",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "pydantic[email]==2.10.3",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "httpx==0.28.1",
    "python-multipart==0.0.19",
    "pydantic-settings==2.7.0",
]
